# home-lab

./: .ansible-lint  .ansible-lint-ignore  .claudeignore  .gitignore  .pre-commit-config.yaml  .yamllint  CLAUDE.md  Makefile  README.md  TODO.md  ansible.cfg  hosts.ini  playbook.yml  pyproject.toml  requirements.yml  site.yml  test-parallel-execution.md  upgrade.yml
.github/workflows/: ci.yml
apps/: README.md
apps/authentik/: Chart.yml  (+4 more)
docs/: INDEX.md  ansible-vault.md  app-deployment-guide.md  beelink-storage-setup.md  complete-disaster-recovery-guide.md  disaster-recovery.md  email-configuration.md  git-commit-guidelines.md  helm-standards.md  k3s-cluster-setup.md  k3s-firewall-troubleshooting.md  k3s-maintenance-guide.md  k3s-migration-evaluation.md  longhorn-disaster-recovery.md  longhorn-snapshot-cleanup-explained.md  media-stack-complete-guide.md  minio-usage.md  nas-power-management.md  network-topology.md  nfs-migration-notes.md  pfsense-haproxy-setup.md  pfsense-integration-architecture.md  pi-boot.md  playbook-guidelines.md  postgresql-guide.md  project-structure.md  storage-architecture.md  storage-setup-quickstart.md  tailscale-setup.md  wireguard-setup.md
group_vars/: all.yml  cluster.yml  nas.yml
host_vars/: beelink.yml  pi-cm5-1.yml  pi-cm5-2.yml  pi-cm5-3.yml
playbooks/: beelink-storage-config.yml  deploy-helm-app.yml  k3s-cluster.yml  k3s-uninstall.yml  k8s-applications.yml  minio-complete.yml  minio-setup.yml  minio-uninstall.yml  nas-ssl-setup.yml  pi-base-config.yml  pi-storage-config.yml  test-certbot-dns.yml  unattended-upgrades.yml
(+151 files in other folders)
