[project]
name = "home-lab"
version = "0.1.0"
description = "Home lab automation using Ansible to provision and manage Raspberry Pi CM5 cluster"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible>=11.9.0",
    "ansible-lint>=25.8.1",
    "pre-commit>=4.3.0",
    "yamllint>=1.37.1",
]
